<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="#fff"
    android:padding="20dp">

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/logo_kanawai_lengkap"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/slogan_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slogan"
        android:textSize="18sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:hint="@string/username"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:hint="@string/password"
        app:passwordToggleEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/lupa_Password"
        android:background="#00000000"
        android:textColor="@color/black"
        android:layout_gravity="end"
        android:elevation="0dp"
        android:layout_margin="5dp"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="#000000"
        android:text="@string/signin"
        android:textColor="#fff" />
    <Button
        android:id="@+id/btnRegistrasi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/newhere"
        android:background="#00000000"
        android:textColor="@color/black"
        android:layout_gravity="end"
        android:elevation="0dp"
        android:layout_margin="5dp"/>

</LinearLayout>